# cmd/api/core/filter.go
@@ -1,7 +1,6 @@
 package core
 
 import (
-	"math"
 	"strings"
 
 	"github.com/yjmurakami/go-kakeibo/internal/validator"
@@ -12,14 +11,6 @@ type Filter struct {
 	PageSize     int
 	Sort         string
 	SortSafelist map[string]bool
-}
-
-type Metadata struct {
-	CurrentPage  int `json:"current_page,omitempty"`
-	PageSize     int `json:"page_size,omitempty"`
-	FirstPage    int `json:"first_page,omitempty"`
-	LastPage     int `json:"last_page,omitempty"`
-	TotalRecords int `json:"total_records,omitempty"`
 }
 
 func ValidateFilter(v *validator.Validator, f Filter) {
@@ -57,18 +48,4 @@ func (f Filter) Limit() int {
 
 func (f Filter) Offset() int {
 	return (f.Page - 1) * f.PageSize
-}
-
-func CalculateMetadata(totalRecords int, page int, pageSize int) Metadata {
-	if totalRecords == 0 {
-		return Metadata{}
-	}
-
-	return Metadata{
-		CurrentPage:  page,
-		PageSize:     pageSize,
-		FirstPage:    1,
-		LastPage:     int(math.Ceil(float64(totalRecords) / float64(pageSize))),
-		TotalRecords: totalRecords,
-	}
 }
