# cmd/api/core/openapi/metadata.oa.go
@@ -1,0 +1,12 @@
+// Code generated by openapi-generator; DO NOT EDIT.
+// API version: 0.0.1
+
+package openapi
+
+type Metadata struct {
+	CurrentPage  int `json:"current_page,omitempty"`
+	PageSize     int `json:"page_size,omitempty"`
+	FirstPage    int `json:"first_page,omitempty"`
+	LastPage     int `json:"last_page,omitempty"`
+	TotalRecords int `json:"total_records,omitempty"`
+}
