# cmd/api/service/interface.go
@@ -18,7 +18,7 @@ type SystemService interface {
 }
 
 type TransactionService interface {
-	V1TransactionsGet(ctx context.Context, from time.Time, to time.Time, filter core.Filter) ([]*openapi.V1TransactionsRes, core.Metadata, error)
+	V1TransactionsGet(ctx context.Context, from time.Time, to time.Time, filter core.Filter) ([]*openapi.V1TransactionsRes, openapi.Metadata, error)
 	V1TransactionsPost(ctx context.Context, oaReq *openapi.V1TransactionsPostReq) (*openapi.V1TransactionsRes, error)
 	V1TransactionsTransactionIdDelete(ctx context.Context, transactionId int) error
 	V1TransactionsTransactionIdGet(ctx context.Context, transactionId int) (*openapi.V1TransactionsRes, error)
